--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.9",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "lucide-react": "^0.559.0",
     "next": "16.0.10",
     "react": "19.2.1",
@@ -35,8 +40,5 @@
     "next-themes": "^0.4.6",
     "tailwindcss": "^4",
     "typescript": "^5"
-  },
-  "compilerOptions": {
-    "baseUrl": "src/"
   }
 }
