--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs-llama-async-proxy",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,11 +18,17 @@
     "@fontsource/roboto": "^5.2.9",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "cors": "^2.8.5",
+    "helmet": "^8.1.0",
     "lucide-react": "^0.559.0",
     "next": "16.0.10",
+    "node-cache": "^5.1.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^4.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
