--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@fontsource/roboto": "^5.2.9",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "helmet": "^8.1.0",
     "lucide-react": "^0.559.0",
     "next": "16.0.10",
     "node-cache": "^5.1.2",
+    "node-fetch": "^2.7.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "recharts": "^3.5.1",
@@ -31,6 +33,7 @@
     "zod": "^4.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -44,6 +47,7 @@
     "eslint-config-next": "16.0.8",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "jest-mock-extended": "^4.0.0",
     "next-themes": "^0.4.6",
     "tailwindcss": "^4",
     "typescript": "^5"
