--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "incremental": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
+    "allowImportingTsExtensions": true,
     "plugins": [
       {
         "name": "next",
