--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "type:check": "tsc --noEmit",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -50,6 +52,7 @@
     "jest-environment-jsdom": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
     "next-themes": "^0.4.6",
+    "nodemon": "^3.1.11",
     "tailwindcss": "^4.1.18",
     "ts-jest": "^29.4.6",
     "typescript": "^5.9.3"
