--- a/package.json
+++ b/package.json
@@ -18,24 +18,42 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.9",
+    "@hookform/resolvers": "^5.2.2",
     "@jest/globals": "^30.2.0",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@mui/utils": "^7.3.6",
+    "@mui/x-charts": "^8.22.1",
+    "@mui/x-date-pickers": "^8.22.1",
+    "@sentry/nextjs": "^10.32.1",
+    "@sentry/node": "^10.32.1",
+    "@sentry/react": "^10.32.1",
+    "@sentry/tracing": "^7.120.4",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
+    "critters": "^0.0.25",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
     "helmet": "^8.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "next-seo": "^7.0.1",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
+    "notistack": "^3.0.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.69.0",
+    "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
@@ -46,6 +64,7 @@
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.1.0",
     "jest": "^30.2.0",
@@ -53,7 +72,9 @@
     "jest-mock-extended": "^4.0.0",
     "next-themes": "^0.4.6",
     "nodemon": "^3.1.11",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
+    "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.4.6",
     "typescript": "^5.9.3"
   }
