--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "next-themes": "^0.4.6",
     "nodemon": "^3.1.11",
     "postcss": "^8.5.6",
+    "puppeteer": "^24.34.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.4.6",
