--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,7 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
