putin de merde de misxtral

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint",
@@ -36,6 +36,7 @@
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "express": "^5.2.1",
     "framer-motion": "^12.23.26",
     "helmet": "^8.1.0",
     "lucide-react": "^0.562.0",
