--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "framer-motion": "^12.23.26",
     "helmet": "^8.1.0",
