--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       ],
       "@/*": [
         "src/*"
-      ], 
+      ],
       "@/lib/*": [
         "src/lib/*"
       ],
@@ -26,7 +26,7 @@
       ],
       "@/types/*": [
         "src/types/*"
-      ],        
+      ],
       "@/config/*": [
         "src/config/*"
       ]
@@ -68,8 +68,9 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
-, "server.js"  ],
+    "**/*.mts",
+    "server.js"
+  ],
   "exclude": [
     "node_modules",
     ".next",
