--- a/.llama-proxy-config.json
+++ b/.llama-proxy-config.json
@@ -1,4 +1,24 @@
 {
+  "llama_server_host": "localhost",
   "llama_server_port": 8134,
-  "llama_server_host": "localhost"
+  "llama_server_path": "/home/bamer/llama.cpp/build/bin/llama-server",
+  "basePath": "/home/bamer/Downloads",
+  "ctx_size": 4096,
+  "batch_size": 2048,
+  "ubatch_size": 512,
+  "threads": -1,
+  "threads_batch": -1,
+  "gpu_layers": -1,
+  "main_gpu": 0,
+  "flash_attn": "auto",
+  "temperature": 0.8,
+  "top_k": 40,
+  "top_p": 0.9,
+  "repeat_penalty": 1.0,
+  "n_predict": -1,
+  "seed": -1,
+  "verbose": false,
+  "embedding": false,
+  "cache_type_k": "f16",
+  "cache_type_v": "f16"
 }
