--- a/.llama-proxy-config.json
+++ b/.llama-proxy-config.json
@@ -20,5 +20,42 @@
   "verbose": false,
   "embedding": false,
   "cache_type_k": "f16",
-  "cache_type_v": "f16"
+  "cache_type_v": "f16",
+  "min_p": 0.0,
+  "xtc_probability": 0.0,
+  "xtc_threshold": 0.1,
+  "typical_p": 1.0,
+  "repeat_last_n": 64,
+  "presence_penalty": 0.0,
+  "frequency_penalty": 0.0,
+  "dry_multiplier": 0.0,
+  "dry_base": 1.75,
+  "dry_allowed_length": 2,
+  "dry_penalty_last_n": 20,
+  "n_cpu_moe": 0,
+  "cpu_moe": false,
+  "tensor_split": "",
+  "split_mode": "layer",
+  "no_mmap": false,
+  "vocab_only": false,
+  "memory_f16": false,
+  "memory_f32": false,
+  "memory_auto": true,
+  "rope_freq_base": 0.0,
+  "rope_freq_scale": 0.0,
+  "yarn_ext_factor": 0.0,
+  "yarn_attn_factor": 0.0,
+  "yarn_beta_fast": 0.0,
+  "yarn_beta_slow": 0.0,
+  "penalize_nl": false,
+  "ignore_eos": false,
+  "mlock": false,
+  "numa": false,
+  "memory_mapped": false,
+  "use_mmap": true,
+  "grp_attn_n": 1,
+  "grp_attn_w": 512,
+  "neg_prompt_multiplier": 1.0,
+  "no_kv_offload": false,
+  "ml_lock": false
 }
