--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "socket.io-client": "^4.8.1",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0",
+    "winston-transport": "^4.9.0",
     "ws": "^8.18.3",
     "zod": "^4.2.1",
     "zustand": "^5.0.9"
