--- a/package.json
+++ b/package.json
@@ -58,12 +58,14 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@types/ws": "^8.18.1",
     "autoprefixer": "^10.4.23",
+    "better-sqlite3": "^12.5.0",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.2",
     "eslint-config-next": "16.1.0",
