--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,15 @@ dev.log
 dev-server.log
 server.log
 
+# Database files
+data/*.db
+data/*.db-shm
+data/*.db-wal
+data/backup/
+
+# Database directories
+data/
+
 # Test artifacts
 test-results-real/
 
