--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx server.js",
+    "dev": "tsx server.ts",
     "build": "next build",
-    "start": "NODE_ENV=production tsx server.js",
+    "start": "NODE_ENV=production tsx server.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint",
@@ -64,6 +64,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
