--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "lint": "echo 'No linting configured' && exit 0",
-    "lint:fix": "echo 'No linting configured' && exit 0",
+    "lint": "node_modules/.bin/eslint public/js/ server.js",
+    "lint:fix": "node_modules/.bin/eslint public/js/ server.js --fix",
     "db:export": "node scripts/db-export.js",
     "db:reset": "node scripts/db-reset.js"
   },
@@ -23,8 +23,11 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
+    "eslint": "^9.39.2",
+    "eslint-plugin-import": "^2.32.0",
     "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0"
+    "jest-environment-jsdom": "^30.2.0",
+    "playwright": "^1.57.0"
   },
   "engines": {
     "node": ">=18.0.0"
