Add unit tests for metadata extraction functions in metadata.test.js
- Implement tests for extractArchitecture, extractParams, extractQuantization, formatBytes, and fileTypeMap functions.
- Cover various model architectures including Llama, Qwen, Mistral, and code models.
- Include tests for parameter extraction from complex filenames and special model families.
- Validate quantization extraction for standard formats and complex filenames.
- Ensure proper formatting of byte sizes and mapping of file types.

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "db:reset": "node scripts/db-reset.js"
   },
   "dependencies": {
+    "@huggingface/gguf": "^0.3.2",
     "better-sqlite3": "^12.5.0",
     "express": "^5.2.1",
+    "gguf": "^1.0.7",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
