--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "lint": "node_modules/.bin/eslint public/js/ server.js",
     "lint:fix": "node_modules/.bin/eslint public/js/ server.js --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write",
     "db:export": "node scripts/db-export.js",
     "db:reset": "node scripts/db-reset.js"
   },
@@ -24,12 +27,15 @@
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@babel/register": "^7.28.3",
     "@testing-library/dom": "^10.4.1",
     "eslint": "^9.39.2",
     "eslint-plugin-import": "^2.32.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
-    "playwright": "^1.57.0"
+    "playwright": "^1.57.0",
+    "prettier": "^3.7.4"
   },
   "engines": {
     "node": ">=18.0.0"
