--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
     "@babel/register": "^7.28.3",
+    "@playwright/test": "^1.57.0",
     "@testing-library/dom": "^10.4.1",
     "eslint": "^9.39.2",
     "eslint-plugin-import": "^2.32.0",
