--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "playwright": "^1.57.0",
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+    "socket.io-client": "^4.8.3"
   },
   "engines": {
     "node": ">=18.0.0"
