--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@huggingface/gguf": "^0.3.2",
     "better-sqlite3": "^12.5.0",
+    "chart.js": "^4.5.1",
     "express": "^5.2.1",
     "gguf": "^1.0.7",
     "socket.io": "^4.8.3"
