--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "chart.js": "^4.5.1",
     "express": "^5.2.1",
     "gguf": "^1.0.7",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "systeminformation": "^5.30.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
