chore(jest): add coverage thresholds and update reporters
- Add coverage threshold of 80% for lines, functions, branches, and statements
- Add text-summary and json reporters to coverage output
- Update VSCode Jest settings to disable coverage on load and enable coverage lettermarks
- Update test:coverage script to include coverage report generation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,16 @@
   "jest.useSeparateOutputChannel": true,
   "jest.enableInlineErrorMessages": true,
   "jest.enableSnapshotPreview": true,
+  "jest.showCoverageOnLoad": false,
+  "jest.showCoverageLettermarks": true,
   "editor.codeLens": true,
   "testing.showTestOutput": "always",
   "testing.showTestResults": "always",
   "testing.showTestCoverage": true,
-  "testing.autoRun": "watch"
+  "testing.autoRun": "watch",
+  "[javascript]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll.eslint": "explicit"
+    }
+  }
 }
