--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "node --watch server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage; node scripts/coverage-report.js",
     "lint": "node_modules/.bin/eslint public/js/ server.js",
     "lint:fix": "node_modules/.bin/eslint public/js/ server.js --fix",
     "format": "prettier --write .",
