feat(presets): enhance UI layout and add delete action styles
- Update header comment and restructure layout: add justify-content to .preset-item, replace space-between header with gap, and drop unused .editor-actions.
- Add .preset-delete styles with hover state and color.
- Convert async/await to promise chains in create/delete handlers to keep UI responsive.

--- a/config/default.ini
+++ b/config/default.ini
@@ -11,3 +11,22 @@ split-mode = none
 main-gpu = 0
 seed = -1
 load-on-startup = false
+
+[qween type]
+model = 
+
+[jhjkhkjh]
+model = 
+
+[queen group]
+model = 
+
+[test group]
+model = 
+
+[new group tests]
+model = 
+
+[new group tests/fulllll]
+model = 
+
