refactor(presets): unify service access via _getService helper
- Use private _getService() to safely retrieve presetsService
- Store service in constructor via this._presetsService
- Remove unused service variable from PresetsController.render
- Also minor config cleanup: remove stale settings, add [my-new-group]

--- a/config/default.ini
+++ b/config/default.ini
@@ -1,16 +1,8 @@
 LLAMA_CONFIG_VERSION = 1
 
 [*]
-ctx-size = 2048
-temp = 0.7
-n-gpu-layers = 0
+model = 
 threads = 0
-batch = 512
-ubatch = 512
-split-mode = none
-main-gpu = 0
-seed = -1
-load-on-startup = false
 
 [qween type]
 model = 
@@ -28,5 +20,8 @@ model =
 model = 
 
 [new group tests/fulllll]
+model = 
+
+[my-new-group]
 model = 
 
