Refactor: standardize parameter mapping keys and defaults in presets and config
- config/default.ini: set defaults for ctx-size, temp, threads, n-gpu-layers, batch, ubatch; remove unused model group sections
- public/js/pages/presets.js: add iniKey mappings to use camelCase keys for backend data; update rendering and serialization to use iniKey
- server/handlers/presets.js: accept both camelCase and kebab-case keys when mapping to INI, ensuring compatibility with frontend and config sources

--- a/config/default.ini
+++ b/config/default.ini
@@ -2,26 +2,10 @@ LLAMA_CONFIG_VERSION = 1
 
 [*]
 model = 
+ctx-size = 7777
 threads = 0
-
-[qween type]
-model = 
-
-[jhjkhkjh]
-model = 
-
-[queen group]
-model = 
-
-[test group]
-model = 
-
-[new group tests]
-model = 
-
-[new group tests/fulllll]
-model = 
-
-[my-new-group]
-model = 
+temp = 0.7
+n-gpu-layers = 0
+batch = 512
+ubatch = 512
 
