refactor: restructure preset groups to enforce centralized parameter management
- Remove detailed UI layout documentation from quick reference guide
- Focus documentation on core problem: models shouldn't be editable individually within groups
- Add available models state and fetching to support new group structure
- Refactor group/model detection logic to better distinguish between group entries and model entries
- Ensure models within groups inherit all parameters from group configuration
- Standalone models remain individually customizable

Conventional Commit: refactor

Git Message:
refactor: restructure preset groups to enforce centralized parameter management

- Remove detailed UI layout documentation from quick reference guide
- Focus documentation on core problem: models shouldn't be editable individually within groups
- Add available models state and fetching to support new group structure
- Refactor group/model detection logic to better distinguish between group entries and model entries
- Ensure models within groups inherit all parameters from group configuration
- Standalone models remain individually customizable

--- a/config/default.ini
+++ b/config/default.ini
@@ -9,9 +9,16 @@ n-gpu-layers = 0
 batch = 512
 ubatch = 512
 
-[qween groups]
+[group tests]
 model = 
+_is_group = true
 
-[qween group tests]
-model = 
+[IQuestLab.IQuest-Coder-V1-40B-Instruct.Q4_K_M.gguf]
+model = /media/bamer/crucial MX300/llm/llama/models/IQuestLab.IQuest-Coder-V1-40B-Instruct.Q4_K_M.gguf/IQuestLab.IQuest-Coder-V1-40B-Instruct.Q4_K_M.gguf
+
+[group tests/Ministral-3-14B-Reasoning-2512-Q4_1.gguf]
+model = /media/bamer/crucial MX300/llm/llama/models/Ministral-3-14B-Reasoning-2512/Ministral-3-14B-Reasoning-2512-Q4_1.gguf
+
+[group tests/Qwen3-14B-Q4_K_S.gguf]
+model = /media/bamer/crucial MX300/llm/llama/models/Qwen3-14B-GGUF/Qwen3-14B-Q4_K_S.gguf
 
