--- a/config/default.ini
+++ b/config/default.ini
@@ -1,24 +1,18 @@
 LLAMA_CONFIG_VERSION = 1
 
 [*]
-model = 
-ctx-size = 131000
-threads = 0
+ctx-size = 2048
 temp = 0.7
-n-gpu-layers = 0
-batch = 512
-ubatch = 512
 
-[group tests]
-model = 
-_is_group = true
+[llama-2-13b]
+model = /path/to/llama-2-13b.gguf
+ctx-size = 4096
+n-gpu-layers = 20
 
-[IQuestLab.IQuest-Coder-V1-40B-Instruct.Q4_K_M.gguf]
-model = /media/bamer/crucial MX300/llm/llama/models/IQuestLab.IQuest-Coder-V1-40B-Instruct.Q4_K_M.gguf/IQuestLab.IQuest-Coder-V1-40B-Instruct.Q4_K_M.gguf
+[test-model]
+model = /path/to/test.gguf
+temp = 0.5
 
-[group tests/Ministral-3-14B-Reasoning-2512-Q4_1.gguf]
-model = /media/bamer/crucial MX300/llm/llama/models/Ministral-3-14B-Reasoning-2512/Ministral-3-14B-Reasoning-2512-Q4_1.gguf
-
-[group tests/Qwen3-14B-Q4_K_S.gguf]
-model = /media/bamer/crucial MX300/llm/llama/models/Qwen3-14B-GGUF/Qwen3-14B-Q4_K_S.gguf
+[fluentlyqwen3-coder-4b-q8_0.gguf]
+model = /media/bamer/crucial MX300/llm/llama/models/fluentlyqwen3-coder-4b-q8_0-gguf/fluentlyqwen3-coder-4b-q8_0.gguf
 
