config: simplify default.ini: remove test groups, enable cache-reuse, add top-p
config/default.ini: remove unused test groups ([test group], [tests], etc.) and [large-models]; set cache-reuse = 256 (from 0) and add top-p = 0.9; keep shared defaults.

--- a/config/default.ini
+++ b/config/default.ini
@@ -1,27 +1,11 @@
 LLAMA_CONFIG_VERSION = 1
 
-[large-models]
-is_group = true
-
 [*]
 ubatch-size = 512
 ctx-size = 131000
 batch-size = 2048
 split-mode = row
-cache-reuse = 0
+cache-reuse = 256
 tensor-split = 50,30
-
-[test group]
-is_group = true
-
-[tests]
-is_group = true
-
-[tests2]
-is_group = true
-
-[test58]
-
-[test 879]
-is_group = true
+top-p = 0.9
 
