refactor(presets): switch to ack callbacks and fix editor lookup

--- a/config/default.ini
+++ b/config/default.ini
@@ -8,7 +8,8 @@ split-mode = row
 cache-reuse = 256
 tensor-split = 70,30
 top-p = 0.95
+seed = 2
 
-[Qwen3-Coder-30B-A3B-Instruct-Q4_K_M]
-ctx-size = 64580
+[gemma-3-1b-it-Q4_K_M]
+ctx-size = 0
 
