--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,7 @@
   "printWidth": 100,
   "bracketSpacing": true,
   "arrowParens": "always",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "parser": "babel",
+  "embeddedLanguageFormatting": "off"
 }
