test: add llama server config and mock transaction method
- Add llama server configuration fields to config-repository tests
- Mock transaction method in models-repository tests
- Update GGUF test files to remove trailing semicolons
- Refactor models page CSS structure and responsive design
- Improve layout and styling for models page components
- Add responsive breakpoints for various screen sizes
- Update main.css to use new models-page.css instead of cards.css
- Mark table.css as legacy for backward compatibility

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,1 +1,18 @@
-onlyBuiltDependencies: -better - sqlite3 - unrs - resolver;
+onlyBuiltDependencies:
+  - ' '
+  - '-'
+  - '3'
+  - ;
+  - b
+  - better-sqlite3
+  - e
+  - i
+  - l
+  - n
+  - o
+  - q
+  - r
+  - s
+  - t
+  - u
+  - v
