--- a/config/default.ini
+++ b/config/default.ini
@@ -1,3 +1,5 @@
+LLAMA_CONFIG_VERSION = 1
+
 [*]
 ctx-size = 131000
 batch-size = 2048
@@ -8,10 +10,17 @@ cache-reuse = 64
 main-gpu = 1
 split-mode = row
 warmup = off
-jinja = true
 
 [gemma-3-1b-it-Q4_K_M]
 ctx-size = 0
 
 [nvidia_Nemotron-3-Nano-30B-A3B-Q5_K_L]
+
+[HY-MT1.5-1.8B.Q8_0]
+
+[Ministral-3-14B-Reasoning-2512-Q4_1]
+
+[Youtu-LLM-2B-F16]
+
+[test-new-model-123]
 
