--- a/config/default.ini
+++ b/config/default.ini
@@ -1,3 +1,5 @@
+LLAMA_CONFIG_VERSION = 1
+
 [*]
 ctx-size = 131000
 batch-size = 2048
@@ -23,3 +25,7 @@ ctx-size = 131000
 
 [Youtu-LLM-2B-F16]
 ctx-size = 64840
+
+[HY-MT1.5-7B-Q6_K]
+main-gpu = 0
+
